--- a/client/src/app/shared/layout/header/header.component.html
+++ b/client/src/app/shared/layout/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <nav class="navbar">
             <div class="navbar-brand">
-                <a [routerLink]="(isAuthenticated$ | async) ? '/app/dashboard' : '/'" class="logo">
+                <a [routerLink]="(isAuthenticated$ | async) ? '/dashboard' : '/'" class="logo">
                     Qonto
                 </a>
             </div>
@@ -24,7 +24,7 @@
                 <!-- Authenticated Navigation -->
                 <ng-container *ngIf="isAuthenticated$ | async">
                     <nav class="navbar-nav">
-                        <a routerLink="/app/dashboard" class="nav-link" routerLinkActive="active">Dashboard</a>
+                        <a routerLink="/dashboard" class="nav-link" routerLinkActive="active">Dashboard</a>
                         <a href="#" class="nav-link">Accounts</a>
                         <a href="#" class="nav-link">Transactions</a>
                         <a href="#" class="nav-link">Cards</a>
