--- a/client/src/app/shared/layout/header/header.component.html
+++ b/client/src/app/shared/layout/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <nav class="navbar">
             <div class="navbar-brand">
-                <a [routerLink]="(isAuthenticated$ | async) ? '/dashboard' : '/'" class="logo">
+                <a [routerLink]="(isAuthenticated$ | async) ? routes.DASHBOARD : routes.HOME" class="logo">
                     Qonto
                 </a>
             </div>
@@ -12,19 +12,19 @@
                 <ng-container *ngIf="!(isAuthenticated$ | async)">
                     <nav class="navbar-nav">
                         <!-- <a href="#" class="nav-link">Solutions</a> -->
-                        <a routerLink="/pricing" class="nav-link">Pricing</a>
+                        <a [routerLink]="routes.PRICING" class="nav-link">Pricing</a>
                     </nav>
 
                     <div class="navbar-actions">
                         <a href="#" class="sign-in-link">Sign in</a>
-                        <a routerLink="/signup" class="btn btn-primary">Open an account</a>
+                        <a [routerLink]="routes.SIGNUP" class="btn btn-primary">Open an account</a>
                     </div>
                 </ng-container>
 
                 <!-- Authenticated Navigation -->
                 <ng-container *ngIf="isAuthenticated$ | async">
                     <nav class="navbar-nav">
-                        <a routerLink="/dashboard" class="nav-link" routerLinkActive="active">Dashboard</a>
+                        <a [routerLink]="routes.DASHBOARD" class="nav-link" routerLinkActive="active">Dashboard</a>
                         <a href="#" class="nav-link">Accounts</a>
                         <a href="#" class="nav-link">Transactions</a>
                         <a href="#" class="nav-link">Cards</a>
