--- a/client/src/app/shared/layout/header/header.component.html
+++ b/client/src/app/shared/layout/header/header.component.html
@@ -24,11 +24,8 @@
                 <!-- Authenticated Navigation -->
                 <ng-container *ngIf="isAuthenticated$ | async">
                     <nav class="navbar-nav">
-                        <a [routerLink]="routes.DASHBOARD" class="nav-link" routerLinkActive="active">Dashboard</a>
+                        <a [routerLink]="routes.TRANSACTIONS" class="nav-link" routerLinkActive="active">Transactions</a>
                         <a href="#" class="nav-link">Accounts</a>
-                        <a href="#" class="nav-link">Transactions</a>
-                        <a href="#" class="nav-link">Cards</a>
-                        <a href="#" class="nav-link">Reports</a>
                     </nav>
 
                     <div class="navbar-actions">
