feat(signin): add sign-in feature with form, routing, and styles

--- a/client/src/app/shared/layout/header/header.component.html
+++ b/client/src/app/shared/layout/header/header.component.html
@@ -16,7 +16,7 @@
                     </nav>
 
                     <div class="navbar-actions">
-                        <a href="#" class="sign-in-link">Sign in</a>
+                        <a [routerLink]="routes.SIGNIN" class="sign-in-link">Sign in</a>
                         <a [routerLink]="routes.SIGNUP" class="btn btn-primary">Open an account</a>
                     </div>
                 </ng-container>
